--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   draggable_scrollbar: ^0.0.4
   page_view_indicator: ^2.0.4
+  flag: ^3.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
