--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.1
   rflutter_alert: ^1.0.3
-  cached_network_image: ^2.2.0+1
+#  cached_network_image: ^2.2.0+1
+  cached_network_image: ^2.0.0
   draggable_scrollbar: ^0.0.4
   page_view_indicator: ^2.0.4
   flag: ^3.0.1
@@ -35,6 +36,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
+dependency_overrides:
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
